<resources>
    <string name="app_name">Tamagotcha</string>
    <!--<string name="title_activity_login">Sign in</string>-->

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="save_login">Remember me</string>

    <!-- Strings related to create account -->
    <string name="create_account_email_hint">Email</string>
    <string name="create_account_password_hint">Password</string>
    <string name="create_account_password_confirm_hint">Confirm Password</string>

    <!-- Strings related to activities fragment -->
    <string name="go_on_activity">Go on Activity</string>
    <string name="enter_phone_number">2533551236</string>
    <string name="share_submit">Send</string>
    <string name="share_message">Take a look at my Tamagotcha pet!</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="error_create_password">Passwords must match</string>
    <string name="error_create_password_length">Password must be at least 8 letters</string>
    <string name="create_account_pet_name">Pet Name</string>
    <string name="action_cancel">Cancel</string>
</resources>
