<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/share_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number" />

    <EditText
        android:id="@+id/share_message"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:text="@string/share_message" />

    <ImageView
        android:id="@+id/share_image"
        android:layout_width="match_parent"
        android:layout_height="363dp" />

    <Button
        android:id="@+id/share_submit_button"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/share_submit" />

</LinearLayout>